# lstructural

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
src/: backtrace.cpp  clock.cpp  clock.h  log_sink.cpp  log_sink.h  logger.cpp  logger.h
test/: test-log.cpp
